@@ -3,6 +3,7 @@ package dev.olog.msc.data.repository
 import android.provider.MediaStore
 import com.squareup.sqlbrite3.BriteContentResolver
 import com.squareup.sqlbrite3.SqlBrite
+import dev.olog.msc.app.app
 import dev.olog.msc.constants.AppConstants
 import dev.olog.msc.data.db.AppDatabase
 import dev.olog.msc.data.mapper.toArtist
@@ -12,6 +13,8 @@ import dev.olog.msc.domain.entity.Song
 import dev.olog.msc.domain.gateway.ArtistGateway
 import dev.olog.msc.domain.gateway.SongGateway
 import dev.olog.msc.domain.gateway.UsedImageGateway
+import dev.olog.msc.indexing.IndexType
+import dev.olog.msc.indexing.MusicIndexingUpdateService
 import dev.olog.msc.onlyWithStoragePermission
 import dev.olog.msc.utils.k.extension.debounceFirst
 import dev.olog.msc.utils.safeCompare
@@ -44,6 +47,7 @@ class ArtistRepository @Inject constructor(
                 .switchMap { songGateway.getAll() }
                 .map { mapToArtists(it) }
                 .map { updateImages(it) }
+                .doOnNext { MusicIndexingUpdateService.enqueueWork(app, IndexType.ARTISTS) }
 
     }
 
