@@ -5,6 +5,7 @@ import android.provider.MediaStore
 import com.squareup.sqlbrite3.BriteContentResolver
 import com.squareup.sqlbrite3.SqlBrite
 import dev.olog.msc.R
+import dev.olog.msc.app.app
 import dev.olog.msc.constants.PlaylistConstants
 import dev.olog.msc.dagger.qualifier.ApplicationContext
 import dev.olog.msc.data.db.AppDatabase
@@ -19,6 +20,8 @@ import dev.olog.msc.domain.gateway.FavoriteGateway
 import dev.olog.msc.domain.gateway.PlaylistGateway
 import dev.olog.msc.domain.gateway.SongGateway
 import dev.olog.msc.domain.interactor.prefs.AppPreferencesUseCase
+import dev.olog.msc.indexing.IndexType
+import dev.olog.msc.indexing.MusicIndexingUpdateService
 import dev.olog.msc.onlyWithStoragePermission
 import dev.olog.msc.utils.MediaId
 import dev.olog.msc.utils.k.extension.debounceFirst
@@ -84,6 +87,7 @@ class PlaylistRepository @Inject constructor(
                 .map { removeBlacklisted(it) }
                 .doOnError { it.printStackTrace() }
                 .onErrorReturnItem(listOf())
+                .doOnNext { MusicIndexingUpdateService.enqueueWork(app, IndexType.PLAYLIST) }
     }
 
     private val cachedData = queryAllData()
