@@ -13,6 +13,7 @@ import android.provider.MediaStore.Audio.Media.DURATION
 import androidx.core.util.getOrDefault
 import com.squareup.sqlbrite3.BriteContentResolver
 import com.squareup.sqlbrite3.SqlBrite
+import dev.olog.msc.app.app
 import dev.olog.msc.constants.AppConstants
 import dev.olog.msc.dagger.qualifier.ApplicationContext
 import dev.olog.msc.data.mapper.toFakeSong
@@ -23,6 +24,8 @@ import dev.olog.msc.domain.entity.Song
 import dev.olog.msc.domain.gateway.SongGateway
 import dev.olog.msc.domain.gateway.UsedImageGateway
 import dev.olog.msc.domain.interactor.prefs.AppPreferencesUseCase
+import dev.olog.msc.indexing.IndexType
+import dev.olog.msc.indexing.MusicIndexingUpdateService
 import dev.olog.msc.onlyWithStoragePermission
 import dev.olog.msc.utils.getLong
 import dev.olog.msc.utils.getString
@@ -79,6 +82,7 @@ class SongRepository @Inject constructor(
                 .map { updateImages(it) }
                 .doOnError { it.printStackTrace() }
                 .onErrorReturn { listOf() }
+                .doOnNext { MusicIndexingUpdateService.enqueueWork(app, IndexType.TRACKS) }
     }
 
     private fun mapToSong(cursor: Cursor): Song {
