@@ -4,6 +4,7 @@
 - added perf monitoring
 - added in-app message
 - added website deep-linking
+- added small implementation for google personal search indexing
 
 2.0.5
 - Fix adaptive color Image presenter crash
